# OpusLibAndroidDemoOldSrc

./: .gitattributes  .gitignore  LICENSE  README.md
app/: CMakeLists.txt
app/src/androidTest/java/com/zhonghua/demo/opusaudiodemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: opus-lib.cpp
app/src/main/cpp/opus/: A2NLSF.c  API.h  CNG.c  Inlines.h  LPC_analysis_filter.c  LPC_fit.c  LPC_inv_pred_gain.c  LP_variable_cutoff.c  MacroCount.h  MacroDebug.h  NLSF2A.c  NLSF_VQ.c  NLSF_decode.c  NLSF_del_dec_quant.c  NLSF_encode.c  NSQ.c  NSQ.h  NSQ_del_dec.c  PLC.c  SigProc_FIX.h  VAD.c  VQ_WMat_EC.c  _kiss_fft_guts.h  analysis.c  analysis.h  arch.h  bands.c  bands.h  biquad_alt.c  burg_modified_FIX.c  celt.c  celt.h  celt_decoder.c  celt_encoder.c  celt_lpc.c  celt_lpc.h  control_audio_bandwidth.c  control_codec.c  corrMatrix_FIX.c  cwrs.c  (+74 more)
app/src/main/cpp/opus/arm/: SigProc_FIX_armv4.h  SigProc_FIX_armv5e.h  fixed_armv4.h  fixed_armv5e.h  macros_armv4.h  macros_armv5e.h
app/src/main/java/vip/inode/demo/opusaudiodemo/: MainActivity.kt
app/src/main/java/vip/inode/demo/opusaudiodemo/presenter/: DecodeOpusPresenter.kt
app/src/main/java/vip/inode/demo/opusaudiodemo/utils/: OpusPlayTask.kt  OpusRecorderTask.kt  OpusUtils.kt  Uilts.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/zhonghua/demo/opusaudiodemo/: ExampleUnitTest.kt
